fix(e2e): fix failing tests and remove star imports
- Fix hover-documentation/hover-println tests: Change JSONPath from
  $.contents.right.value to $.contents.value (LSP4J Either serialization)
- Fix diagnostics-syntax test: Add ChangeDocument.text field support for
  full-document replacement
- Replace 4 star imports with ~45 explicit imports:
  - ScenarioContext.kt: 14 kotlinx.serialization.json imports
  - StepExecutors.kt: 11 kotlinx.serialization.json + 13 org.eclipse.lsp4j imports
  - StepExecutorsTest.kt: 7 kotlinx.serialization.json imports
- Update detekt.yml: Remove test exclusion from WildcardImport rule

All 13 E2E tests pass.

--- a/detekt.yml
+++ b/detekt.yml
@@ -204,7 +204,6 @@ style:
     active: true
   UseRequireNotNull:
     active: true
+  # Enforce no star imports everywhere, including tests
   WildcardImport:
     active: true
-    excludes:
-    - '**/test/**'
