refactor(e2e): improve code quality and add documentation
- Remove duplicate Gson instance from StepExecutors.kt
- Add standalone toJsonElement() function to JsonBridge
- Convert JsonExpectationEvaluator from class to object (singleton)
- Add regex caching in matchesRegex() for performance
- Switch initialize-basic.yaml to inProcess mode (experiment)
- Add comprehensive README.md for E2E test suite
- Add scenarios/README.md with migration tracking

Future: All scenarios will be migrated to inProcess mode
for significantly faster test execution.

--- a/tests/e2e/resources/scenarios/initialize-basic.yaml
+++ b/tests/e2e/resources/scenarios/initialize-basic.yaml
@@ -1,7 +1,7 @@
 name: initialize-basic
-description: Basic lifecycle handshake that exercises initialize/shutdown over stdio.
+description: Basic lifecycle handshake that exercises initialize/shutdown in-process.
 server:
-  mode: stdio
+  mode: inProcess
 workspace:
   fixture: empty-workspace
 steps:
