--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,8 +38,16 @@ on:
     types: [completed]
     branches: [main]
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
+  # PRs: group by head_ref (cancel outdated runs for same branch)
+  # Main pushes: group by SHA (allows parallel runs per commit for fast regression detection)
+  # workflow_run: group by triggering run ID (allows resume after provisioning)
+  group: >-
+    ${{ github.workflow }}-${{
+      github.event_name == 'pull_request' && github.head_ref ||
+      github.event_name == 'workflow_run' && github.event.workflow_run.id ||
+      github.sha
+    }}
+  cancel-in-progress: ${{ github.event_name == 'pull_request' }}
 
 # ============================================================================
 # RUNNER CONFIGURATION
