feat(ci): add runner check summary step
Improves visibility by adding a final summary step that always runs
and reports the check result for each runner type:
- magalu: Shows if available or provisioning triggered
- local-macos: Shows if available or check failed
- cloud: Confirms using GitHub-hosted runners

This restores the informative logging that was lost when refactoring
the 'Decide on provisioning' step.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -183,6 +183,36 @@ jobs:
           echo ""
           exit 1
 
+      # --- Summary ---
+      - name: Runner Check Summary
+        if: always()
+        run: |
+          LABEL="${{ steps.mode.outputs.label }}"
+          echo "Runner label: $LABEL"
+
+          case "$LABEL" in
+            "magalu")
+              if [[ "${{ steps.check-magalu.outputs.has-runners }}" == "true" ]]; then
+                echo "✅ Magalu runner available"
+              else
+                echo "⏳ Magalu runner provisioning triggered"
+              fi
+              ;;
+            "local-macos")
+              if [[ "${{ steps.check-local.outputs.has-runners }}" == "true" ]]; then
+                echo "✅ Local macOS runner available"
+              else
+                echo "❌ Local macOS runner check failed (see above)"
+              fi
+              ;;
+            "cloud")
+              echo "✅ Using GitHub-hosted cloud runners (no check needed)"
+              ;;
+            *)
+              echo "✅ Runner check complete for: $LABEL"
+              ;;
+          esac
+
   build:
     name: Build and Test
     needs: [check-paths, check-runner]
