ci: improve runner specs output for immediate visibility
- Add immediate console output with ASCII box art
- Keep formatted table in GitHub Step Summary
- Extract variables once to avoid duplication
- Use cleaner conditionals with runner.os variable

This allows viewing runner specifications in real-time during job
execution instead of waiting for job completion to see the summary.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -256,12 +256,6 @@ jobs:
       - name: 🖥️ Runner Specs
         shell: bash
         run: |
-          echo "## 🖥️ Runner: ${{ runner.name }}" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "| Spec | Value |" >> $GITHUB_STEP_SUMMARY
-          echo "|------|-------|" >> $GITHUB_STEP_SUMMARY
-          echo "| **OS** | ${{ runner.os }} / ${{ runner.arch }} |" >> $GITHUB_STEP_SUMMARY
-
           # Cross-platform CPU/RAM detection
           # TODO: Add Windows support using: wmic cpu get NumberOfCores, systeminfo for RAM
           if [[ "${{ runner.os }}" == "macOS" ]]; then
@@ -276,11 +270,32 @@ jobs:
             RAM=$(free -h | awk '/Mem:/ {print $2}')
           fi
           DISK=$(df -h / | awk 'NR==2 {print $4 " free"}' 2>/dev/null || echo "N/A")
+          HOSTNAME=$(hostname)
 
-          echo "| **CPU Cores** | $CORES |" >> $GITHUB_STEP_SUMMARY
-          echo "| **RAM** | $RAM |" >> $GITHUB_STEP_SUMMARY
-          echo "| **Disk** | $DISK |" >> $GITHUB_STEP_SUMMARY
-          echo "| **Hostname** | $(hostname) |" >> $GITHUB_STEP_SUMMARY
+          # Print to console (visible immediately)
+          echo "╔════════════════════════════════════════╗"
+          echo "║        Runner Specifications           ║"
+          echo "╠════════════════════════════════════════╣"
+          echo "║ OS:         ${{ runner.os }} / ${{ runner.arch }}"
+          echo "║ CPU Cores:  $CORES"
+          echo "║ RAM:        $RAM"
+          echo "║ Disk:       $DISK"
+          echo "║ Hostname:   $HOSTNAME"
+          echo "╚════════════════════════════════════════╝"
+          echo ""
+
+          # Also write to summary (for post-job formatted view)
+          {
+            echo "## 🖥️ Runner: ${{ runner.name }}"
+            echo ""
+            echo "| Spec | Value |"
+            echo "|------|-------|"
+            echo "| **OS** | ${{ runner.os }} / ${{ runner.arch }} |"
+            echo "| **CPU Cores** | $CORES |"
+            echo "| **RAM** | $RAM |"
+            echo "| **Disk** | $DISK |"
+            echo "| **Hostname** | $HOSTNAME |"
+          } >> $GITHUB_STEP_SUMMARY
       - name: Set up JDK ${{ matrix.java }}
         uses: actions/setup-java@f2beeb24e141e01a676f977032f5a29d81c9e27e # v5.1.0
         with:
