feat: add BSP client support for Bazel, sbt, and Mill
- Add bsp4j 2.1.1 dependency for Build Server Protocol
- Create BspConnectionDetails to parse .bsp/*.json files
- Create BspClient for JSON-RPC communication with BSP servers
- Create BspBuildTool implementing BuildTool interface
- Prioritize BSP detection in BuildToolManager
- Add WorkspaceResolution.empty() companion function
- Add 18 unit tests for BSP components
- Exclude BspClient from coverage (requires real BSP server)
- Disable koverVerify for tests module (e2e only, no production code)

This enables dependency resolution via BSP for build tools that have
native BSP server implementations (bazel-bsp, sbt 1.4+, Mill).

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -39,6 +39,7 @@ mavenResolver = "1.9.25"
 javaparser = "3.27.1"
 arrow = "2.2.1"
 flexmark = "0.64.8"
+bsp4j = "2.1.1"
 
 [libraries]
 # Plugins (libraries for plugins block)
@@ -63,6 +64,9 @@ rewrite-groovy = { module = "org.openrewrite:rewrite-groovy", version.ref = "rew
 
 # Gradle Tooling
 gradle-tooling-api = { module = "org.gradle:gradle-tooling-api", version.ref = "gradleTooling" }
+
+# Build Server Protocol
+bsp4j = { module = "ch.epfl.scala:bsp4j", version.ref = "bsp4j" }
 
 # Kotlin
 kotlin-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
