--- a/.github/workflows/extract-jenkins-metadata.yml
+++ b/.github/workflows/extract-jenkins-metadata.yml
@@ -39,16 +39,16 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4
 
       - name: Set up JDK 21
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@c1e323688fd81a25caa38c78aa6df2d33d3e20d9 # v4
         with:
           java-version: '21'
           distribution: 'temurin'
 
       - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v4
+        uses: gradle/actions/setup-gradle@45b52564f44a4a311f3e621e74c7c97dd0c5696a # v4
 
       - name: Build Jenkins extractor image
         run: |
@@ -74,7 +74,7 @@ jobs:
       #       --args="tools/jenkins-extractor/output/gdsl-output.groovy tools/jenkins-extractor/output/metadata.json"
 
       - name: Upload extraction artifacts
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
         with:
           name: jenkins-metadata
           path: tools/jenkins-extractor/output/
@@ -107,7 +107,7 @@ jobs:
     if: failure()
     steps:
       - name: Create issue on failure
-        uses: actions/github-script@v7
+        uses: actions/github-script@f28e40c7f34bde8b3046d885e986cb6290c5673b # v7
         with:
           script: |
             const title = `Jenkins Metadata Extraction Failed - ${new Date().toISOString().split('T')[0]}`;
