docs: add branch-based release strategy (#75)
* docs: add branch-based release strategy

Added comprehensive release documentation and alpha branch support:

- RELEASES.md: Complete guide to release strategy
  - Branch-based workflows (main=stable, alpha=prerelease)
  - Conventional commits guide
  - Release-As commit footer documentation
  - FAQ and examples

- Alpha branch configuration:
  - .github/release-please-config-alpha.json
  - .github/.release-please-manifest-alpha.json
  - .github/workflows/release-alpha.yml

- Updated main workflow name for clarity

This enables automatic alpha releases without config changes.
Work on alpha branch → auto alpha releases (0.1.0-alpha.1, etc.)
Merge to main → auto stable releases (0.1.0, 0.1.1, etc.)

* docs: reorganize documentation into docs/ folder

Moved documentation files to docs/ for better organization:
- docs/RELEASES.md (release strategy guide)
- docs/AGENTS.md (AI agent guidelines)
- docs/CONTRIBUTING.md (contribution guide)
- docs/COPILOT.md (GitHub Copilot setup)

Kept at root:
- README.md (main project readme)
- CHANGELOG.md (auto-generated by release-please)

* docs: reorganize documentation into docs/ folder

Moved documentation files to docs/ for better organization:
- docs/RELEASES.md (release strategy guide)
- docs/COPILOT.md (GitHub Copilot setup)

Kept at root (standard locations):
- AGENTS.md (AI agent discovery)
- CONTRIBUTING.md (GitHub standard)
- README.md (main project readme)
- CHANGELOG.md (auto-generated by release-please)

--- a/editors/code/.github/workflows/release-alpha.yml
+++ b/editors/code/.github/workflows/release-alpha.yml
@@ -1,8 +1,8 @@
-name: Release Please (Stable)
+name: Release Please (Alpha)
 
 on:
   push:
-    branches: [main]
+    branches: [alpha]
   workflow_dispatch:
 
 permissions:
@@ -18,10 +18,11 @@ jobs:
       tag_name: ${{ steps.release.outputs.tag_name }}
 
     steps:
-      - name: Create stable release PR or release
+      - name: Create alpha release PR or release
         uses: googleapis/release-please-action@v4
         id: release
         with:
           token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
-          config-file: .release-please-config.json
-          manifest-file: .release-please-manifest.json
+          config-file: .github/release-please-config-alpha.json
+          manifest-file: .github/.release-please-manifest-alpha.json
+          target-branch: alpha
