--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ gitHooks = "2.1.6"
 jmh = "0.7.3"
 
 groovy = "4.0.29"
+ivy = "2.5.3"
 lsp4j = "0.24.0"
 codenarc = "3.7.0-groovy-4.0"
 gmetrics = "2.1.0"
@@ -53,6 +54,9 @@ groovy-console = { module = "org.apache.groovy:groovy-console", version.ref = "g
 groovy-json = { module = "org.apache.groovy:groovy-json", version.ref = "groovy" }
 groovy-groovydoc = { module = "org.apache.groovy:groovy-groovydoc", version.ref = "groovy" }
 groovy-macro = { module = "org.apache.groovy:groovy-macro", version.ref = "groovy" }
+
+# Grape/Grab dependency resolution (required for @Grab annotations in Groovy)
+ivy = { module = "org.apache.ivy:ivy", version.ref = "ivy" }
 
 # LSP
 lsp4j = { module = "org.eclipse.lsp4j:org.eclipse.lsp4j", version.ref = "lsp4j" }
