feat: Refactor and Enable VS Code Extension Testing (#76)
* feat: implement vs code testing setup with xvfb support

Adds integration tests using @vscode/test-cli, configures CI workflows with Xvfb for headless testing, and updates project configuration.

* docs: add testing instructions to CONTRIBUTING.md

* test: address PR feedback (inline assertions and glob pattern)

* fix(ci): enable server preparation in CI workflows

Removes SKIP_PREPARE_SERVER env var to ensure Groovy Language Server JAR is downloaded for tests on all platforms.

* fix(ci): explicitly set SKIP_PREPARE_SERVER to false

Sets SKIP_PREPARE_SERVER: false to explicitly indicate that the Language Server JAR is required for integration tests.

* fix(ci): explicitly set SKIP_PREPARE_SERVER to false in main.yml

--- a/editors/code/.github/workflows/pr.yml
+++ b/editors/code/.github/workflows/pr.yml
@@ -22,13 +22,17 @@ jobs:
         run: npm ci
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SKIP_PREPARE_SERVER: true
+          # Explicitly enable server prep to ensure JAR is downloaded for tests
+          SKIP_PREPARE_SERVER: false
 
       - name: Validate code quality
         run: |
           npm run lint
           npm run check-types
           npm run compile
+          /usr/bin/Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
+          export DISPLAY=:99
+          npm run test:all
 
       - name: Check bundle size
         run: |
