--- a/editors/code/.github/workflows/main.yml
+++ b/editors/code/.github/workflows/main.yml
@@ -52,10 +52,22 @@ jobs:
         run: npm ci
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SKIP_PREPARE_SERVER: ${{ matrix.os != 'ubuntu-latest' }}
+          # Explicitly enable server prep to ensure JAR is downloaded for tests on all OSes
+          SKIP_PREPARE_SERVER: false
 
       - name: Build
         run: npm run compile
+
+      - name: Run Tests (Linux)
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          /usr/bin/Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
+          export DISPLAY=:99
+          npm run test:all
+
+      - name: Run Tests (Mac/Windows)
+        if: matrix.os != 'ubuntu-latest'
+        run: npm run test:all
 
       - name: Package (Ubuntu only)
         if: matrix.os == 'ubuntu-latest'
