--- a/editors/code/client/package.json
+++ b/editors/code/client/package.json
@@ -9,8 +9,10 @@
     "vscode-languageclient": "^9.0.1"
   },
   "devDependencies": {
+    "@types/node": "^22",
     "@types/vscode": "^1.100.0",
-    "@types/node": "^22"
+    "@vscode/test-cli": "^0.0.12",
+    "@vscode/test-electron": "^2.5.2"
   },
   "private": true
 }
