--- a/editors/code/package.json
+++ b/editors/code/package.json
@@ -382,7 +382,10 @@
     "clean": "rm -rf client/out/ server/*.jar server/.groovy-lsp-version",
     "postinstall": "cd client && npm install && cd .. && npm run prepare-server",
     "test": "mocha",
-    "test:watch": "mocha --watch"
+    "test:watch": "mocha --watch",
+    "compile:tests": "tsc -b client/tsconfig.json",
+    "test:integration": "npm run compile:tests && vscode-test",
+    "test:all": "npm run test && npm run test:integration"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
@@ -391,6 +394,8 @@
     "@types/node": "^22",
     "@types/proxyquire": "^1.3.31",
     "@types/sinon": "^21.0.0",
+    "@vscode/test-cli": "^0.0.12",
+    "@vscode/test-electron": "^2.5.2",
     "@vscode/vsce": "^3.0.0",
     "chai": "^6.2.1",
     "esbuild": "^0.27.0",
