fix: apply spotless formatting and improve pre-commit hook
- Run spotlessApply to fix formatting violations
- Improve pre-commit hook to only track staged .kt files for re-staging
- Add || true to grep to prevent failure when no .kt files staged
- Add kotlin-format-check step to lefthook.yml
- Add TODO in settings.gradle.kts for future migration to lefthook

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,9 +1,12 @@
 pre-commit:
   commands:
+    kotlin-format-check:
+      glob: '*.kt'
+      run: ./gradlew spotlessCheck
     yaml-format:
-      glob: "*.{yml,yaml}"
+      glob: '*.{yml,yaml}'
       run: yq -i -P '.' {staged_files}
     python-format:
-      glob: "*.py"
+      glob: '*.py'
       run: ruff format {staged_files} && ruff check --fix {staged_files}
       # TODO: Add explicit dependency check for ruff in the future
