--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,6 +22,7 @@ logback = "1.5.23"
 rewriteGroovy = "8.67.0"
 
 junit = "6.0.1"
+junit4 = "4.13.2"
 junitPlatform = "6.0.1"
 assertj = "3.27.6"
 mockk = "1.14.7"
@@ -93,6 +94,7 @@ junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "jun
 junit-jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junit" }
 junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit" }
 junit-platform-launcher = { module = "org.junit.platform:junit-platform-launcher", version.ref = "junitPlatform" }
+junit4 = { module = "junit:junit", version.ref = "junit4" }
 assertj-core = { module = "org.assertj:assertj-core", version.ref = "assertj" }
 mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 spock-core = { module = "org.spockframework:spock-core", version.ref = "spock" }
