--- a/editors/code/package.json
+++ b/editors/code/package.json
@@ -100,6 +100,11 @@
         "icon": "$(clear-all)"
       },
       {
+        "command": "groovy.test.generate",
+        "title": "Groovy: Generate Spock Specification",
+        "category": "Test"
+      },
+      {
         "command": "groovy.repl.show",
         "title": "Groovy: Show REPL",
         "icon": "$(terminal)"
