ci: fix path filter to skip CI for docs-only changes
The paths-filter was incorrectly triggering CI for .md files because
the default predicate-quantifier is 'some', which doesn't properly
handle negation patterns with mixed positive/negative globs.

Changes:
- Add predicate-quantifier: 'every' to properly handle exclusions
- Add .agent/** and .gemini/** to exclusion list
- Add groovy-*/** and tests/** to positive patterns for completeness
- Use **/*.md instead of *.md to match all .md files, not just root
- Add settings.gradle.kts to trigger patterns

Now PRs that only change documentation files (.md), agent config
(.agent/), or Gemini config (.gemini/) will skip the build job.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,17 +97,27 @@ jobs:
           # For workflow_run events, use the triggering workflow's head commit as base
           # This fixes the 'before field is missing' warning
           base: ${{ github.event_name == 'workflow_run' && github.event.workflow_run.head_sha || '' }}
+          # Use 'every' predicate to properly handle exclusion patterns
+          # With 'some' (default), a file matches if it matches ANY pattern, breaking negations
+          predicate-quantifier: 'every'
           filters: |
             run_main_ci:
+              # Positive patterns: paths that require CI
               - 'src/**'
               - 'gradle/**'
+              - 'groovy-*/**'
+              - 'tests/**'
               - '*.gradle'
               - '*.gradle.kts'
               - 'gradle.properties'
+              - 'settings.gradle.kts'
               - '.github/workflows/ci.yml'
-              - '!infra/**'
-              - '!*.md'
+              # Negative patterns: paths that should NOT trigger CI
+              - '!**/*.md'
+              - '!.agent/**'
+              - '!.gemini/**'
               - '!docs/**'
+              - '!infra/**'
               - '!.github/workflows/runner-*.yml'
 
   check-runner:
